根据当前版本gorm，调试create, update更新时间方式
